# Al_Traductor_backend

./: .env  .env.example  .gitignore  Dockerfile  README.md  app.py  connections.py  docker-compose.yml  lector.py  main.py  pyproject.toml  requirements.txt  services.py  settings.py  traductor.py  traductor_ingesp.py
api/: connection.py  controller.py
api/languages/adapters/: languages_response.py  response.py
api/languages/controllers/: languages.py  languages_controller.py
api/translation/adapters/: translate_port.py  translate_request.py  translate_response.py  translation_request.py  translation_response.py
api/translation/controllers/: translate.py  translate_controller.py  translation_controller.py
api/tts/adapters/: request.py  tts_port.py  tts_request.py  tts_response.py
api/tts/controllers/: tts.py  tts_controller.py
controllers/: concatenacion.py
core/domain/language/: language.py  languages_graph.py
core/domain/translation/: translation.py
core/domain/tts/: speech_synthesis.py
core/kernel/: exception.py  port.py  request.py  response.py  validator.py
core/kernel/feature/: feature.py  feature_input.py  feature_output.py
core/language/: entity.py
core/language/repositories/: languages_repository.py
core/language/repository/: languages.py
core/language/traits/: entity.py
core/synthesis/: entity.py
core/translation/: entity.py
data/: diccionario_fonemas.json
infrastructure/sources/: languages.yaml
infrastructure/storage/: yaml.py
services/translator/: model.py
utils/: cors.py  routes.py
(+21 files in other folders)
